--- a/guidelines/audio_producers/index.html
+++ b/guidelines/audio_producers/index.html
@@ -113,6 +113,25 @@
         <li>Likewise, enclosing a small area where the microphone is located (such as a desk) with cushions or other material may help to drown out external noise. (<a href="https://twitter.com/devuppodcast/status/959610188960591872">Example</a>)</li>
       </ul>
     </ul>
+    <h3>Using a DAW</h3>
+    <p>The following guidelines are for those who have access to a <a href="https://en.wikipedia.org/wiki/Digital_audio_workstation">Digital Audio Workstation</a> (DAW).</p>
+    <ul>
+      <li>Check session settings in your DAW:
+        <ul>
+          <li>Make sure the <em>sample rate</em> is at least 48 kHz and the <em>bit rate</em> is at 24 and that you are recording in WAV format. Other options will be 44.1 kHz and 16 bit.</li>
+          <li>For the purposes of getting the best possible recording, 48/24 is preferred and the industry standard for audio professionals. It is lossless, meaning it will not be compressed like an mp3 or other codec formats. Should you wish to convert the file to a smaller format later you can.</li>
+        </ul>
+      </li>
+      <li>Before you begin recording, it is a good idea to test your levels:
+        <ul>
+          <li>You will be able to see the .WAV file by doing a test recording and listening.</li>
+          <li>Levels should be between -5 and -12 dB when recording, ensuring that it is loud enough that you are capturing a strong level on the voice without ever distorting.</li>
+          <li>Most DAWs will have an indicator that goes from yellow to red. When the talent is speaking at their loudest the indicator should go into the yellow but never the red.</li>
+          <li>Especially with digital, distortion or clipping is very difficult to fix. You may wish to request that the talent speak or perform their lines as loud as they think they will during recording so you can set your levels appropriately.</li>
+          <li>If you do “clip” while recording it is important to adjust levels and do another take.</li>
+        </ul>
+      </li>
+    </ul>
     </div>
   </div>
 
