--- a/stories/hus/0030_atsaltaláb_slides.html
+++ b/stories/hus/0030_atsaltaláb_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Benim kedim nerede? - Global African Storybook</title>
+  <title>Ats'altaláb - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="benim-kedim-nerede" class="slide level1">
-<h1>Benim kedim nerede?</h1>
+<section id="atsaltaláb" class="slide level1">
+<h1>Ats'altaláb</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/02.jpg" /></p>
-<p>Benim kedim nerede?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/02.jpg" /></p>
+<p>U ichích in ats'ál yan jant'oj.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/03.jpg" /></p>
-<p>Yatağın altında mı?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/03.jpg" /></p>
+<p>In kulbél u ats'ál tam u ách tin t'ilchál i biyál t'ilabchik tam wákal.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/04.jpg" /></p>
-<p>Dolabın üstünde mi?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/04.jpg" /></p>
+<p>K'ijidh u ats'ál tam in ubát' k'al u ja'ubchik</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/05.jpg" /></p>
-<p>Koltuğun yanında mı?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/05.jpg" /></p>
+<p>Yab alwa' u ats'ál tam u tátaj tin uchál abal yab in kwa'al i tumím.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/06.jpg" /></p>
-<p>Çöpün yan tarafında mı?</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/06.jpg" /></p>
+<p>In k'án u ats'ál tam u mím tin muts'uk'nál.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,39 +141,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/07.jpg" /></p>
-<p>Sepetin içinde mi?</p>
-<center>
-<strong>6</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/08.jpg" /></p>
-<p>Evin dışında mı?</p>
-<center>
-<strong>7</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/09.jpg" /></p>
-<p>İşte burada!</p>
-<center>
-<strong>8</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="benim-kedim-nerede-1">Benim kedim nerede?</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Bronwen Heath<br> <strong>Translation:</strong> Nahide Büşra Ertekin, Zeynep Kara<br> <strong>Language:</strong> Turkish<br>
+<h2 id="atsaltaláb-1">Ats'altaláb</h2>
+<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Kathy Arbuckle<br> <strong>Translation:</strong> Gudelia Cruz Aguilar<br> <strong>Language:</strong> Huastec<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/where-my-cat'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/feelings'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
