--- a/stories/tr/0066_nozibele-ve-üç-saç-teli.html
+++ b/stories/tr/0066_nozibele-ve-üç-saç-teli.html
@@ -70,7 +70,7 @@ Tessa Welch<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
 
-<p>Tam köye yaklaştıklarında Nozibele elini ensesine götürmüş. Boynundaki kolyesi yerinde yokmuş! Arkadaşlarına “Lütfen benimle geri dönün!” diye yalvarmış. Ama onlar zaten çok kaldıklarını söylemişler.</p>
+<p>Tam köye yaklaştıklarında Nozibele elini ensesine götürmüş. Boynundaki kolyesi yerinde yokmuş! Arkadaşlarına “Lütfen benimle geri dönün!” diye yalvarmış. Ama onlar zaten çok geç kaldıklarını söylemişler.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
