--- a/stories/zh/0214_老鼠_slides.html
+++ b/stories/zh/0214_老鼠_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0214/07.jpg" /></p>
-<p>老鼠们来到房子里吃糖果。他们大笑：“吱吱吱。。吱吱。。”</p>
+<p>老鼠们来到房子里吃糖果。他们大笑：“吱吱吱……吱吱……”</p>
 <center>
 <strong>6</strong>
 </center>
