--- a/stories/index.html
+++ b/stories/index.html
@@ -82,6 +82,7 @@
 <li class="toc"><a href="#german">German [Deutsch]</a></li><br>
 <li class="toc"><a href="#gujarati">Gujarati [ગુજરાતી]</a></li><br>
 <li class="toc"><a href="#hindi">Hindi [हिन्दी]</a></li><br>
+<li class="toc"><a href="#huastec">Huastec [Tenék]</a></li><br>
 <li class="toc"><a href="#indonesian">Indonesian [Bahasa Indonesia]</a></li><br>
 <li class="toc"><a href="#italian">Italian [Italiano]</a></li><br>
 <li class="toc"><a href="#jamaican-creole">Jamaican Creole [Patwa]</a></li><br>
@@ -2344,6 +2345,33 @@
       <td><a href="/stories/hi/0360_बिल्लीयो-की-गिनती-करना_slides.html" target="_blank">बिल्लीयो की गिनती करना</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsTm9TTkFCSVpEUTA"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="hi0360"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+  </tbody>
+</table>
+
+   </ul>
+  <h3><a name='huastec'>Huastec [Tenék]</a></h3>
+   <ul><table>
+  <thead>
+    <tr>
+      <th>Story #</th>
+      <th>Title</th>
+      <th class="dl">Download</th>
+      <th class="lic">License</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>0030</td>
+      <td><a href="/stories/hus/0030_atsaltaláb_slides.html" target="_blank">Ats’altaláb</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hus0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
+      <td>0302</td>
+      <td><a href="/stories/hus/0302_an-kamal_slides.html" target="_blank">An k´amal</a></td>
+      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="hus0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -6295,7 +6323,7 @@
       <td>0030</td>
       <td><a href="http://africanstorybook.org/stories/feelings">Feelings</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0030">aeb</a>, <a href="#ar0030">ar</a>, <a href="#bn0030">bn</a>, <a href="#de0030">de</a>, <a href="#es0030">es</a>, <a href="#fa0030">fa</a>, <a href="#hi0030">hi</a>, <a href="#it0030">it</a>, <a href="#ko0030">ko</a>, <a href="#nb0030">nb</a>, <a href="#nn0030">nn</a>, <a href="#pa0030">pa</a>, <a href="#pl0030">pl</a>, <a href="#ru0030">ru</a>, <a href="#tl0030">tl</a>, <a href="#tr0030">tr</a>, <a href="#ur0030">ur</a>, <a href="#vi0030">vi</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
+      <td><a href="#aeb0030">aeb</a>, <a href="#ar0030">ar</a>, <a href="#bn0030">bn</a>, <a href="#de0030">de</a>, <a href="#es0030">es</a>, <a href="#fa0030">fa</a>, <a href="#hi0030">hi</a>, <a href="#hus0030">hus</a>, <a href="#it0030">it</a>, <a href="#ko0030">ko</a>, <a href="#nb0030">nb</a>, <a href="#nn0030">nn</a>, <a href="#pa0030">pa</a>, <a href="#pl0030">pl</a>, <a href="#ru0030">ru</a>, <a href="#tl0030">tl</a>, <a href="#tr0030">tr</a>, <a href="#ur0030">ur</a>, <a href="#vi0030">vi</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
     </tr>
     <tr>
       <td>0049</td>
@@ -6733,7 +6761,7 @@
       <td>0302</td>
       <td><a href="http://africanstorybook.org/stories/fire">Fire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0302">ar</a>, <a href="#bn0302">bn</a>, <a href="#de0302">de</a>, <a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#it0302">it</a>, <a href="#ko0302">ko</a>, <a href="#nb0302">nb</a>, <a href="#nn0302">nn</a>, <a href="#pa0302">pa</a>, <a href="#pl0302">pl</a>, <a href="#tl0302">tl</a>, <a href="#tr0302">tr</a>, <a href="#ur0302">ur</a>, <a href="#yue0302">yue</a>, <a href="#zh0302">zh</a></td>
+      <td><a href="#ar0302">ar</a>, <a href="#bn0302">bn</a>, <a href="#de0302">de</a>, <a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#hus0302">hus</a>, <a href="#it0302">it</a>, <a href="#ko0302">ko</a>, <a href="#nb0302">nb</a>, <a href="#nn0302">nn</a>, <a href="#pa0302">pa</a>, <a href="#pl0302">pl</a>, <a href="#tl0302">tl</a>, <a href="#tr0302">tr</a>, <a href="#ur0302">ur</a>, <a href="#yue0302">yue</a>, <a href="#zh0302">zh</a></td>
     </tr>
     <tr>
       <td>0306</td>
