--- a/stories/tr/0066_nozibele-ve-üç-saç-teli_slides.html
+++ b/stories/tr/0066_nozibele-ve-üç-saç-teli_slides.html
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
-<p>Tam köye yaklaştıklarında Nozibele elini ensesine götürmüş. Boynundaki kolyesi yerinde yokmuş! Arkadaşlarına &quot;Lütfen benimle geri dönün!&quot; diye yalvarmış. Ama onlar zaten çok kaldıklarını söylemişler.</p>
+<p>Tam köye yaklaştıklarında Nozibele elini ensesine götürmüş. Boynundaki kolyesi yerinde yokmuş! Arkadaşlarına &quot;Lütfen benimle geri dönün!&quot; diye yalvarmış. Ama onlar zaten çok geç kaldıklarını söylemişler.</p>
 <center>
 <strong>4</strong>
 </center>
