--- a/stories/yue/0327_數動物.html
+++ b/stories/yue/0327_數動物.html
@@ -105,7 +105,7 @@ Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br>粵語</div><div class="page
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>文:</strong> Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br /><strong>圖:</strong> Rob Owen<br /><strong>譯:</strong> <br /><strong>語言:</strong> 粵語</p>
+<p><strong>文:</strong> Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br /><strong>圖:</strong> Rob Owen<br /><strong>譯:</strong> dohliam<br /><strong>語言:</strong> 粵語</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/counting-animals">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
