--- a/stories/yue/0327_數動物_slides.html
+++ b/stories/yue/0327_數動物_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="數動物-1">數動物</h2>
-<strong>文:</strong> Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br> <strong>圖:</strong> Rob Owen<br> <strong>譯:</strong> <br> <strong>語言:</strong> 粵語<br>
+<strong>文:</strong> Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br> <strong>圖:</strong> Rob Owen<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
