--- a/stories/zh/0120_头发.html
+++ b/stories/zh/0120_头发.html
@@ -45,7 +45,7 @@
 
 <h1 id="section">头发</h1>
 
-Clare Verbeek, Thembani Dladla and Zanele<br>中文</div><div class="pagebreak">
+Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>中文</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/02.jpg" /></p>
 
@@ -103,7 +103,7 @@ Clare Verbeek, Thembani Dladla and Zanele<br>中文</div><div class="pagebreak">
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>作者:</strong> Clare Verbeek, Thembani Dladla and Zanele<br /><strong>绘画:</strong> Bronwen Heath<br /><strong>翻译:</strong> dohliam<br /><strong>语言:</strong> 中文</p>
+<p><strong>作者:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br /><strong>绘画:</strong> Bronwen Heath<br /><strong>翻译:</strong> dohliam<br /><strong>语言:</strong> 中文</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/hair">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
