--- a/stories/zh/0214_老鼠.html
+++ b/stories/zh/0214_老鼠.html
@@ -84,7 +84,7 @@ Nambi Sseppuuya Community Resource Centre<br>中文</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0214/07.jpg" /></p>
 
-<p>老鼠们来到房子里吃糖果。他们大笑：“吱吱吱。。吱吱。。”</p>
+<p>老鼠们来到房子里吃糖果。他们大笑：“吱吱吱……吱吱……”</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
