--- a/stories/zh/0327_数数动物_slides.html
+++ b/stories/zh/0327_数数动物_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <h2 id="数数动物-1">数数动物</h2>
-<strong>作者:</strong> Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br> <strong>绘画:</strong> Rob Owen<br> <strong>翻译:</strong> <br> <strong>语言:</strong> 中文<br>
+<strong>作者:</strong> Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br> <strong>绘画:</strong> Rob Owen<br> <strong>翻译:</strong> dohliam<br> <strong>语言:</strong> 中文<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
