--- a/stories/ja/0052_シンベグウィレ_slides.html
+++ b/stories/ja/0052_シンベグウィレ_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>蠟做嘅細路仔 - Global African Storybook</title>
+  <title>シンベグウィレ - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="蠟做嘅細路仔" class="slide level1">
-<h1>蠟做嘅細路仔</h1>
+<section id="シンベグウィレ" class="slide level1">
+<h1>シンベグウィレ</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/02.jpg" /></p>
-<p>好耐好耐之前，有一個好快樂嘅家庭。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/02.jpg" /></p>
+<p>お母さんが死んでしまって、シンベグウィレは、ほんとうに本当に悲しい気持ちでした。 けれども、お父さんがシンベグウィレのためにできる限りのことをしてくれたので、お母さんがいなくても、少しずつですが元気になれるようになりました。 ふたりは、毎朝同じ椅子に一緒に座ってその日のことをはなし、夜には一緒にご飯をつくりました。そして、片付けが終わったら、お父さんがシンベグウィレの宿題を手伝うのでした。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/03.jpg" /></p>
-<p>班細路仔從來都唔會打交，仲成日喺屋企同埋農田度幫爹哋媽咪做嘢。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
+<p>ある日のことでした。お父さんがいつもより遅く帰ってきました。「シンベグウィレ、どこにいる？」呼ばれてシンベグウィレがお父さんに駆けよっていきます。けれども、お父さんが知らない女の人の手を握っているのを見たとたん、ぴたっと立ち止まってしまいました。 「シンベグウィレに、特別な人を会わせたくて連れてきたんだ。アニータというんだよ」お父さんはにっこりほほえみました。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/04.jpg" /></p>
-<p>但係佢哋唔准靠近火。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/04.jpg" /></p>
+<p>「はじめまして、シンベグウィレ。お父さんからたくさんあなたのことを聞いてるのよ」そう言ったものの、アニータは笑いもしなければ、シンベグウィレの手を取ろうともしません。 お父さんはというと、とても嬉しそうにウキウキしながら、これから3人で暮らしたらどんなに素敵な暮らしになるかを話しています。「ねぇ、シンベグウィレ、アニータをお母さんだと思ってくれたら嬉しいんだけどな」お父さんは言いました。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/05.jpg" /></p>
-<p>佢哋淨係可以喺夜晚黑做嘢。冇計啦，因為佢哋都係用蠟做嘅！</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/05.jpg" /></p>
+<p>シンベグウィレの暮らしは、すっかり変わってしまいました。 お父さんと朝一緒に同じ椅子に座る時間はありません。アニータが、シンベグウィレに家のお手伝いをたくさん言いつけるのです。あんまりたくさんのお手伝いがあるので、夜は疲れて宿題もできません。夜ご飯が終わると、シンベグウィレはまっすぐに布団へ行くようになりました。死んでしまったお母さんがくれたきれいな色の毛布だけが、シンベグウィレをなぐさめてくれたのです。 お父さんは、そんなシンベグウィレの気持ちに気づいていないようでした。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/06.jpg" /></p>
-<p>但係其中一個男仔好想出去，感受一下陽光。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/06.jpg" /></p>
+<p>何か月かたって、お父さんはしばらく家を空けると言いました。「出張にいかなくちゃいけないけど、ふたりは一緒にがんばれるよね」シンベグウィレの顔が曇ったことに、お父さんは気づきませんでした。アニータはだまっていました。アニータも嬉しくなかったのです。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/07.jpg" /></p>
-<p>有一日，佢終於忍唔住啦。雖然兄弟都警告過佢......</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/07.jpg" /></p>
+<p>お父さんが出かけたあと、シンベグウィレの毎日は前よりもっとつらくなりました。 お手伝いを全部しなかったり、弱音をはいたりすると、アニータはシンベグウィレをたたくのです。しかも、夜ご飯はアニータがほとんど食べてしまって、シンベグウィレにはほんの少しの食べ残ししか回ってきません。毎晩シンベグウィレは、お母さんの毛布を抱きしめて、泣きながら寝るのでした。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/08.jpg" /></p>
-<p>但係已經太遲啦！佢喺炎熱嘅太陽底下融咗。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/08.jpg" /></p>
+<p>そんなある朝、シンベグウィレは寝坊してしまいました。「なんて怠け者なの！」アニータは怒って、シンベグウィレを布団から引きずり出しました。大切なお母さんの毛布にアニータの爪が引っかかって、毛布は真っ二つにちぎれてしまいました。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/09.jpg" /></p>
-<p>其他蠟做嘅細路仔見到佢哋嘅兄弟逐漸融化、消失，非常之傷心。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/09.jpg" /></p>
+<p>シンベグウィレはもうびっくりして悲しくて、とうとう逃げ出すことにしたのです。ちぎれた毛布と少しの食べ物をもって家を出ると、お父さんが通った道をたどっていきました。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,9 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/10.jpg" /></p>
-<p>但係佢哋諗出咗一個好辦法：就係將融化咗嗰嚿蠟捻成一隻雀仔。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/10.jpg" /></p>
+<p>夜になって、シンベグウィレは川のほとりの高い木にのぼって、枝の間に寝床をつくりました。 そして、寝るときにこんな歌をうたいました。</p>
+<p>おかあさーん おかあさーん おかあさんがおいてった わたしをおいて行っちゃった おとうさんは好きじゃない もう、わたしのことが好きじゃない おかあさんは、いつ帰る？ おかあさんがおいてった</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +178,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/11.jpg" /></p>
-<p>佢哋將變成雀仔嘅兄弟帶去一座高山上面。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/11.jpg" /></p>
+<p>翌朝も、シンベグウィレはまた同じ歌をうたいました。 その歌は、川へ洗濯に来た女の人たちの耳にも入りましたが、高い木の上から聞こえてくるので、女の人たちは、これはきっと葉っぱが音を立てているのだろうと思って洗濯を続けていました。 けれども、その歌をしっかり聴いた人がひとりだけいました。</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +187,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/12.jpg" /></p>
-<p>太陽慢慢升起，佢一路迎向晨光唱歌，一路遠走高飛。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/12.jpg" /></p>
+<p>その人は木を見上げて、女の子ときれいな色の毛布を見つけると、思わず声を上げました。 「シンベグウィレ！弟の子だわ！」 ほかの女の人たちは洗濯をやめて、シンベグウィレを木から下ろしてくれました。 シンベグウィレのおばさんは、小さなシンベグウィレを抱きしめて、一生懸命になぐさめてくれました。</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,12 +196,58 @@
 </section>
 <section class="slide level1">
 
-<h2 id="蠟做嘅細路仔-1">蠟做嘅細路仔</h2>
-<strong>文:</strong> Southern African Folktale<br> <strong>圖:</strong> Wiehan de Jager<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/13.jpg" /></p>
+<p>おばさんはシンベグウィレを家に連れて帰ると、あたたかいご飯を出してくれたあと、お母さんの毛布をかけた布団にシンベグウィレを寝かせてくれました。その夜寝るとき、シンベグウィレは泣いてしまったのですが、でもそれはつらくて泣いたのではありません。安心したから泣いてしまったのでした。 おばさんならちゃんと面倒をみてくれると、シンベグウィレにはわかったのです。</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
+<p>シンベグウィレのお父さんが家に帰ると、シンベグウィレがいないことに気づきました。「アニータ、何があったんだ？」お父さんは暗い気持ちで聞きました。アニータはシンベグウィレが逃げ出した時のことを話しました。「シンベグウィレにみとめてもらいたかったの。でもきっと、わたしがきつくあたりすぎたんだわ･･･」お父さんは家を出ると、川のほうへ歩いてから、お姉さんの住む村に向かいました。シンベグウィレを見かけていないか、お姉さんに確かめるためでした。</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/15.jpg" /></p>
+<p>シンベグウィレがいとこたちと遊んでいるときでした。遠くにお父さんの姿を見つけたシンベグウィレは、お父さんが怒っているんじゃないかと怖くなって、おばさんの家の中に急いで隠れてしまいました。けれども、近くまでやってきたお父さんはこう言いました。「シンベグウィレ、お母さんにぴったりな人を自分で探し出したんだね。シンベグウィレのことが大好きで、しかもわかってくれる人だもんね。ぼくはそんなすごい娘がいてくれて幸せだし、父さんだってシンベグウィレのことが大好きなんだよ」お父さんとはなして、シンベグウィレは好きなだけおばさんの家にいられることになりました。</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
+<p>お父さんは毎日シンベグウィレに会いに来ました。ある日、アニータが一緒にやってきて、シンベグウィレの手を握ろうと手を差し出しました。 「本当に、本当にごめんなさい。わたしが悪かったの」こう言って、アニータは泣いていました。「もう一度、一緒に暮らすためにがんばってみてもいい？」シンベグウィレは心配そうなお父さんの顔を見上げてから、ゆっくりと一歩踏み出すと、アニータに抱きついたのでした。</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/17.jpg" /></p>
+<p>次の週、アニータはシンベグウィレといとことおばさんを家に呼んで、ご飯をふるまいました。すごいごちそうです！ アニータはシンベグウィレの大好きなものをぜんぶ作っていて、みんなでおなかいっぱいになるまで食べました。 食べ終わると、大人たちが話しているあいだ、子どもたちは一緒に遊びました。遊びながら、シンベグウィレは本当にとても嬉しくなって、勇気もわいてきました。だからこう決めたのです。</p>
+<p>「あと少し、あとほんの少ししたら、うちに帰って、お父さんと新しいお母さんと一緒に暮らそう」</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="シンベグウィレ-1">シンベグウィレ</h2>
+<strong>作:</strong> Rukia Nantale<br> <strong>絵:</strong> Benjamin Mitchley<br> <strong>訳:</strong> Ryoko Sakakibara<br> <strong>言語:</strong> 日本語<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/children-wax'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/simbegwire'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
