--- a/stories/index.html
+++ b/stories/index.html
@@ -82,7 +82,6 @@
 <li class="toc"><a href="#german">German [Deutsch]</a></li><br>
 <li class="toc"><a href="#gujarati">Gujarati [ગુજરાતી]</a></li><br>
 <li class="toc"><a href="#hindi">Hindi [हिन्दी]</a></li><br>
-<li class="toc"><a href="#huastec">Huastec [Tenék]</a></li><br>
 <li class="toc"><a href="#indonesian">Indonesian [Bahasa Indonesia]</a></li><br>
 <li class="toc"><a href="#italian">Italian [Italiano]</a></li><br>
 <li class="toc"><a href="#jamaican-creole">Jamaican Creole [Patwa]</a></li><br>
@@ -90,7 +89,6 @@
 <li class="toc"><a href="#khmer">Khmer [ភាសាខ្មែរ]</a></li><br>
 <li class="toc"><a href="#korean">Korean [한국어]</a></li><br>
 <li class="toc"><a href="#malay">Malay [Bahasa Melayu]</a></li><br>
-<li class="toc"><a href="#nahuatl">Nahuatl [Nāhuatl]</a></li><br>
 <li class="toc"><a href="#nepali">Nepali [नेपाली]</a></li><br>
 <li class="toc"><a href="#norwegian">Norwegian [norsk]</a></li><br>
 <li class="toc"><a href="#norwegian-nynorsk">Norwegian (Nynorsk) [nynorsk]</a></li><br>
@@ -2350,33 +2348,6 @@
 </table>
 
    </ul>
-  <h3><a name='huastec'>Huastec [Tenék]</a></h3>
-   <ul><table>
-  <thead>
-    <tr>
-      <th>Story #</th>
-      <th>Title</th>
-      <th class="dl">Download</th>
-      <th class="lic">License</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>0030</td>
-      <td><a href="/stories/hus/0030_atsaltaláb_slides.html" target="_blank">Ats’altaláb</a></td>
-      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
-      <td><a name="hus0030"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-    </tr>
-    <tr>
-      <td>0302</td>
-      <td><a href="/stories/hus/0302_an-kamal_slides.html" target="_blank">An k´amal</a></td>
-      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
-      <td><a name="hus0302"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-    </tr>
-  </tbody>
-</table>
-
-   </ul>
   <h3><a name='indonesian'>Indonesian [Bahasa Indonesia]</a></h3>
    <ul><table>
   <thead>
@@ -2734,10 +2705,22 @@
       <td><a name="ja0009"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0052</td>
+      <td><a href="/stories/ja/0052_シンベグウィレ_slides.html" target="_blank">シンベグウィレ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0052"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0066</td>
       <td><a href="/stories/ja/0066_ノジベレと三本の髪の毛_slides.html" target="_blank">ノジベレと三本の髪の毛</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ja0066"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0067</td>
+      <td><a href="/stories/ja/0067_料理_slides.html" target="_blank">料理</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0110</td>
@@ -2764,10 +2747,22 @@
       <td><a name="ja0141"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0156</td>
+      <td><a href="/stories/ja/0156_はらぺこのワニ_slides.html" target="_blank">はらぺこのワニ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0156"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0201</td>
       <td><a href="/stories/ja/0201_ロバの子_slides.html" target="_blank">ロバの子</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ja0201"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0231</td>
+      <td><a href="/stories/ja/0231_お天気の本_slides.html" target="_blank">お天気の本</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0231"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0253</td>
@@ -2804,6 +2799,12 @@
       <td><a href="/stories/ja/0329_怠け者のアナンシ_slides.html" target="_blank">怠け者のアナンシ</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ja0329"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0342</td>
+      <td><a href="/stories/ja/0342_お仕置き_slides.html" target="_blank">お仕置き</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0342"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
   </tbody>
 </table>
@@ -3130,27 +3131,6 @@
 </table>
 
    </ul>
-  <h3><a name='nahuatl'>Nahuatl [Nāhuatl]</a></h3>
-   <ul><table>
-  <thead>
-    <tr>
-      <th>Story #</th>
-      <th>Title</th>
-      <th class="dl">Download</th>
-      <th class="lic">License</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>0008</td>
-      <td><a href="/stories/nah/0008_tlajke-tijchiua_slides.html" target="_blank">Tlajke tijchiua?</a></td>
-      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
-      <td><a name="nah0008"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-    </tr>
-  </tbody>
-</table>
-
-   </ul>
   <h3><a name='nepali'>Nepali [नेपाली]</a></h3>
    <ul><table>
   <thead>
@@ -3278,12 +3258,6 @@
       <td><a href="/stories/nb/0072_honningguidens-hevn_slides.html" target="_blank">Honningguidens hevn</a></td>
       <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="nb0072"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-    </tr>
-    <tr>
-      <td>0073</td>
-      <td><a href="/stories/nb/0073_å-telle-dyr_slides.html" target="_blank">Å telle dyr</a></td>
-      <td><a href=""><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
-      <td><a name="nb0073"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0087</td>
@@ -6287,7 +6261,7 @@
       <td>0008</td>
       <td><a href="http://africanstorybook.org/stories/what-are-you-doing">What are you doing?</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#aeb0008">aeb</a>, <a href="#ar0008">ar</a>, <a href="#bn0008">bn</a>, <a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#hi0008">hi</a>, <a href="#it0008">it</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#ko0008">ko</a>, <a href="#nah0008">nah</a>, <a href="#nb0008">nb</a>, <a href="#nn0008">nn</a>, <a href="#pa0008">pa</a>, <a href="#pl0008">pl</a>, <a href="#ru0008">ru</a>, <a href="#tl0008">tl</a>, <a href="#tr0008">tr</a>, <a href="#uk0008">uk</a>, <a href="#ur0008">ur</a>, <a href="#vi0008">vi</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
+      <td><a href="#aeb0008">aeb</a>, <a href="#ar0008">ar</a>, <a href="#bn0008">bn</a>, <a href="#da0008">da</a>, <a href="#de0008">de</a>, <a href="#eo0008">eo</a>, <a href="#es0008">es</a>, <a href="#fa0008">fa</a>, <a href="#gu0008">gu</a>, <a href="#hi0008">hi</a>, <a href="#it0008">it</a>, <a href="#ja0008">ja</a>, <a href="#jam0008">jam</a>, <a href="#ko0008">ko</a>, <a href="#nb0008">nb</a>, <a href="#nn0008">nn</a>, <a href="#pa0008">pa</a>, <a href="#pl0008">pl</a>, <a href="#ru0008">ru</a>, <a href="#tl0008">tl</a>, <a href="#tr0008">tr</a>, <a href="#uk0008">uk</a>, <a href="#ur0008">ur</a>, <a href="#vi0008">vi</a>, <a href="#yue0008">yue</a>, <a href="#zh0008">zh</a></td>
     </tr>
     <tr>
       <td>0009</td>
@@ -6323,7 +6297,7 @@
       <td>0030</td>
       <td><a href="http://africanstorybook.org/stories/feelings">Feelings</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#aeb0030">aeb</a>, <a href="#ar0030">ar</a>, <a href="#bn0030">bn</a>, <a href="#de0030">de</a>, <a href="#es0030">es</a>, <a href="#fa0030">fa</a>, <a href="#hi0030">hi</a>, <a href="#hus0030">hus</a>, <a href="#it0030">it</a>, <a href="#ko0030">ko</a>, <a href="#nb0030">nb</a>, <a href="#nn0030">nn</a>, <a href="#pa0030">pa</a>, <a href="#pl0030">pl</a>, <a href="#ru0030">ru</a>, <a href="#tl0030">tl</a>, <a href="#tr0030">tr</a>, <a href="#ur0030">ur</a>, <a href="#vi0030">vi</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
+      <td><a href="#aeb0030">aeb</a>, <a href="#ar0030">ar</a>, <a href="#bn0030">bn</a>, <a href="#de0030">de</a>, <a href="#es0030">es</a>, <a href="#fa0030">fa</a>, <a href="#hi0030">hi</a>, <a href="#it0030">it</a>, <a href="#ko0030">ko</a>, <a href="#nb0030">nb</a>, <a href="#nn0030">nn</a>, <a href="#pa0030">pa</a>, <a href="#pl0030">pl</a>, <a href="#ru0030">ru</a>, <a href="#tl0030">tl</a>, <a href="#tr0030">tr</a>, <a href="#ur0030">ur</a>, <a href="#vi0030">vi</a>, <a href="#yue0030">yue</a>, <a href="#zh0030">zh</a></td>
     </tr>
     <tr>
       <td>0049</td>
@@ -6341,7 +6315,7 @@
       <td>0052</td>
       <td><a href="http://africanstorybook.org/stories/simbegwire">Simbegwire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0052">ar</a>, <a href="#bn0052">bn</a>, <a href="#de0052">de</a>, <a href="#es0052">es</a>, <a href="#fa0052">fa</a>, <a href="#it0052">it</a>, <a href="#ko0052">ko</a>, <a href="#nb0052">nb</a>, <a href="#nn0052">nn</a>, <a href="#pa0052">pa</a>, <a href="#pl0052">pl</a>, <a href="#ru0052">ru</a>, <a href="#tl0052">tl</a>, <a href="#tr0052">tr</a>, <a href="#ur0052">ur</a>, <a href="#vi0052">vi</a>, <a href="#yue0052">yue</a>, <a href="#zh0052">zh</a></td>
+      <td><a href="#ar0052">ar</a>, <a href="#bn0052">bn</a>, <a href="#de0052">de</a>, <a href="#es0052">es</a>, <a href="#fa0052">fa</a>, <a href="#it0052">it</a>, <a href="#ja0052">ja</a>, <a href="#ko0052">ko</a>, <a href="#nb0052">nb</a>, <a href="#nn0052">nn</a>, <a href="#pa0052">pa</a>, <a href="#pl0052">pl</a>, <a href="#ru0052">ru</a>, <a href="#tl0052">tl</a>, <a href="#tr0052">tr</a>, <a href="#ur0052">ur</a>, <a href="#vi0052">vi</a>, <a href="#yue0052">yue</a>, <a href="#zh0052">zh</a></td>
     </tr>
     <tr>
       <td>0053</td>
@@ -6371,7 +6345,7 @@
       <td>0067</td>
       <td><a href="http://africanstorybook.org/stories/cooking">Cooking</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0067">ar</a>, <a href="#bn0067">bn</a>, <a href="#de0067">de</a>, <a href="#es0067">es</a>, <a href="#fa0067">fa</a>, <a href="#gu0067">gu</a>, <a href="#it0067">it</a>, <a href="#ko0067">ko</a>, <a href="#nb0067">nb</a>, <a href="#nn0067">nn</a>, <a href="#pa0067">pa</a>, <a href="#pl0067">pl</a>, <a href="#ru0067">ru</a>, <a href="#tl0067">tl</a>, <a href="#tr0067">tr</a>, <a href="#ur0067">ur</a>, <a href="#vi0067">vi</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
+      <td><a href="#ar0067">ar</a>, <a href="#bn0067">bn</a>, <a href="#de0067">de</a>, <a href="#es0067">es</a>, <a href="#fa0067">fa</a>, <a href="#gu0067">gu</a>, <a href="#it0067">it</a>, <a href="#ja0067">ja</a>, <a href="#ko0067">ko</a>, <a href="#nb0067">nb</a>, <a href="#nn0067">nn</a>, <a href="#pa0067">pa</a>, <a href="#pl0067">pl</a>, <a href="#ru0067">ru</a>, <a href="#tl0067">tl</a>, <a href="#tr0067">tr</a>, <a href="#ur0067">ur</a>, <a href="#vi0067">vi</a>, <a href="#yue0067">yue</a>, <a href="#zh0067">zh</a></td>
     </tr>
     <tr>
       <td>0068</td>
@@ -6389,7 +6363,7 @@
       <td>0073</td>
       <td><a href="http://africanstorybook.org/stories/counting">Counting</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#de0073">de</a>, <a href="#eo0073">eo</a>, <a href="#ko0073">ko</a>, <a href="#nb0073">nb</a>, <a href="#nn0073">nn</a>, <a href="#tl0073">tl</a>, <a href="#yue0073">yue</a>, <a href="#zh0073">zh</a></td>
+      <td><a href="#de0073">de</a>, <a href="#eo0073">eo</a>, <a href="#ko0073">ko</a>, <a href="#nn0073">nn</a>, <a href="#tl0073">tl</a>, <a href="#yue0073">yue</a>, <a href="#zh0073">zh</a></td>
     </tr>
     <tr>
       <td>0078</td>
@@ -6569,7 +6543,7 @@
       <td>0156</td>
       <td><a href="http://africanstorybook.org/stories/hungry-crocodile">The hungry crocodile</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0156">ar</a>, <a href="#bn0156">bn</a>, <a href="#ca0156">ca</a>, <a href="#de0156">de</a>, <a href="#es0156">es</a>, <a href="#fa0156">fa</a>, <a href="#gu0156">gu</a>, <a href="#it0156">it</a>, <a href="#ko0156">ko</a>, <a href="#nb0156">nb</a>, <a href="#nn0156">nn</a>, <a href="#pa0156">pa</a>, <a href="#pl0156">pl</a>, <a href="#sv0156">sv</a>, <a href="#tl0156">tl</a>, <a href="#tr0156">tr</a>, <a href="#ur0156">ur</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
+      <td><a href="#ar0156">ar</a>, <a href="#bn0156">bn</a>, <a href="#ca0156">ca</a>, <a href="#de0156">de</a>, <a href="#es0156">es</a>, <a href="#fa0156">fa</a>, <a href="#gu0156">gu</a>, <a href="#it0156">it</a>, <a href="#ja0156">ja</a>, <a href="#ko0156">ko</a>, <a href="#nb0156">nb</a>, <a href="#nn0156">nn</a>, <a href="#pa0156">pa</a>, <a href="#pl0156">pl</a>, <a href="#sv0156">sv</a>, <a href="#tl0156">tl</a>, <a href="#tr0156">tr</a>, <a href="#ur0156">ur</a>, <a href="#yue0156">yue</a>, <a href="#zh0156">zh</a></td>
     </tr>
     <tr>
       <td>0158</td>
@@ -6671,7 +6645,7 @@
       <td>0231</td>
       <td><a href="http://africanstorybook.org/stories/weather-book">Weather book</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0231">ar</a>, <a href="#bn0231">bn</a>, <a href="#de0231">de</a>, <a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#it0231">it</a>, <a href="#ko0231">ko</a>, <a href="#nb0231">nb</a>, <a href="#nl0231">nl</a>, <a href="#nn0231">nn</a>, <a href="#pa0231">pa</a>, <a href="#pl0231">pl</a>, <a href="#tl0231">tl</a>, <a href="#tr0231">tr</a>, <a href="#ur0231">ur</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
+      <td><a href="#ar0231">ar</a>, <a href="#bn0231">bn</a>, <a href="#de0231">de</a>, <a href="#es0231">es</a>, <a href="#fa0231">fa</a>, <a href="#hi0231">hi</a>, <a href="#it0231">it</a>, <a href="#ja0231">ja</a>, <a href="#ko0231">ko</a>, <a href="#nb0231">nb</a>, <a href="#nl0231">nl</a>, <a href="#nn0231">nn</a>, <a href="#pa0231">pa</a>, <a href="#pl0231">pl</a>, <a href="#tl0231">tl</a>, <a href="#tr0231">tr</a>, <a href="#ur0231">ur</a>, <a href="#yue0231">yue</a>, <a href="#zh0231">zh</a></td>
     </tr>
     <tr>
       <td>0234</td>
@@ -6761,7 +6735,7 @@
       <td>0302</td>
       <td><a href="http://africanstorybook.org/stories/fire">Fire</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0302">ar</a>, <a href="#bn0302">bn</a>, <a href="#de0302">de</a>, <a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#hus0302">hus</a>, <a href="#it0302">it</a>, <a href="#ko0302">ko</a>, <a href="#nb0302">nb</a>, <a href="#nn0302">nn</a>, <a href="#pa0302">pa</a>, <a href="#pl0302">pl</a>, <a href="#tl0302">tl</a>, <a href="#tr0302">tr</a>, <a href="#ur0302">ur</a>, <a href="#yue0302">yue</a>, <a href="#zh0302">zh</a></td>
+      <td><a href="#ar0302">ar</a>, <a href="#bn0302">bn</a>, <a href="#de0302">de</a>, <a href="#eo0302">eo</a>, <a href="#es0302">es</a>, <a href="#fa0302">fa</a>, <a href="#gu0302">gu</a>, <a href="#it0302">it</a>, <a href="#ko0302">ko</a>, <a href="#nb0302">nb</a>, <a href="#nn0302">nn</a>, <a href="#pa0302">pa</a>, <a href="#pl0302">pl</a>, <a href="#tl0302">tl</a>, <a href="#tr0302">tr</a>, <a href="#ur0302">ur</a>, <a href="#yue0302">yue</a>, <a href="#zh0302">zh</a></td>
     </tr>
     <tr>
       <td>0306</td>
@@ -6845,7 +6819,7 @@
       <td>0342</td>
       <td><a href="http://africanstorybook.org/stories/punishment">Punishment</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0342">ar</a>, <a href="#bn0342">bn</a>, <a href="#de0342">de</a>, <a href="#es0342">es</a>, <a href="#fa0342">fa</a>, <a href="#it0342">it</a>, <a href="#ko0342">ko</a>, <a href="#nb0342">nb</a>, <a href="#nn0342">nn</a>, <a href="#pa0342">pa</a>, <a href="#pl0342">pl</a>, <a href="#tl0342">tl</a>, <a href="#tr0342">tr</a>, <a href="#ur0342">ur</a>, <a href="#vi0342">vi</a>, <a href="#yue0342">yue</a>, <a href="#zh0342">zh</a></td>
+      <td><a href="#ar0342">ar</a>, <a href="#bn0342">bn</a>, <a href="#de0342">de</a>, <a href="#es0342">es</a>, <a href="#fa0342">fa</a>, <a href="#it0342">it</a>, <a href="#ja0342">ja</a>, <a href="#ko0342">ko</a>, <a href="#nb0342">nb</a>, <a href="#nn0342">nn</a>, <a href="#pa0342">pa</a>, <a href="#pl0342">pl</a>, <a href="#tl0342">tl</a>, <a href="#tr0342">tr</a>, <a href="#ur0342">ur</a>, <a href="#vi0342">vi</a>, <a href="#yue0342">yue</a>, <a href="#zh0342">zh</a></td>
     </tr>
     <tr>
       <td>0359</td>
