--- a/stories/ja/0342_お仕置き_slides.html
+++ b/stories/ja/0342_お仕置き_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>蠟做嘅細路仔 - Global African Storybook</title>
+  <title>お仕置き - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="蠟做嘅細路仔" class="slide level1">
-<h1>蠟做嘅細路仔</h1>
+<section id="お仕置き" class="slide level1">
+<h1>お仕置き</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/02.jpg" /></p>
-<p>好耐好耐之前，有一個好快樂嘅家庭。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/02.jpg" /></p>
+<p>ある日、お母さんは、果物をたくさん手に入れました。</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/03.jpg" /></p>
-<p>班細路仔從來都唔會打交，仲成日喺屋企同埋農田度幫爹哋媽咪做嘢。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
+<p>「わたしたち、いつ果物を食べられるの？」と尋ねると、お母さんは「今夜にでも食べましょう」と言いました。</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/04.jpg" /></p>
-<p>但係佢哋唔准靠近火。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
+<p>お兄ちゃんのラヒームは、食いしんぼう。全ての果物を味見して、たくさん食べてしまいます。</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/05.jpg" /></p>
-<p>佢哋淨係可以喺夜晚黑做嘢。冇計啦，因為佢哋都係用蠟做嘅！</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
+<p>「ほら見て、ラヒームったら！」弟が叫んでいます。「ラヒームはお行儀が悪くて、わがままなのよ」と私は言いました。</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/06.jpg" /></p>
-<p>但係其中一個男仔好想出去，感受一下陽光。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/06.jpg" /></p>
+<p>お母さんは、ラヒームのことを怒っています。</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/07.jpg" /></p>
-<p>有一日，佢終於忍唔住啦。雖然兄弟都警告過佢......</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
+<p>私たちもラヒームに腹を立てています。でも、ラヒームは自分のしたことを悪いと思っていません。</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/08.jpg" /></p>
-<p>但係已經太遲啦！佢喺炎熱嘅太陽底下融咗。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/08.jpg" /></p>
+<p>「ラヒームにお仕置きをしないの？」弟は、お母さんに尋ねました。</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/09.jpg" /></p>
-<p>其他蠟做嘅細路仔見到佢哋嘅兄弟逐漸融化、消失，非常之傷心。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
+<p>「ラヒーム、もうすぐ自分のしたことを後悔するわよ」とお母さんは、言い聞かせました。</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/10.jpg" /></p>
-<p>但係佢哋諗出咗一個好辦法：就係將融化咗嗰嚿蠟捻成一隻雀仔。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/10.jpg" /></p>
+<p>ラヒームは、気持ちが悪くなり始めます。</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/11.jpg" /></p>
-<p>佢哋將變成雀仔嘅兄弟帶去一座高山上面。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
+<p>「おなかがとても痛いよ」と小さな声でささやきました。</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/12.jpg" /></p>
-<p>太陽慢慢升起，佢一路迎向晨光唱歌，一路遠走高飛。</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
+<p>お母さんは、こうなることがわかっていました。果物は、ラヒームにお仕置きをしているのです！</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,12 +195,21 @@
 </section>
 <section class="slide level1">
 
-<h2 id="蠟做嘅細路仔-1">蠟做嘅細路仔</h2>
-<strong>文:</strong> Southern African Folktale<br> <strong>圖:</strong> Wiehan de Jager<br> <strong>譯:</strong> dohliam<br> <strong>語言:</strong> 粵語<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
+<p>その後、ラヒームはみんなに謝りました。「僕はもう二度と欲張ったりしないよ」と約束し、みんなもラヒームを信じることにしました。</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="お仕置き-1">お仕置き</h2>
+<strong>作:</strong> Adelheid Marie Bwire<br> <strong>絵:</strong> Melany Pietersen<br> <strong>訳:</strong> Noriko Shibata<br> <strong>言語:</strong> 日本語<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/children-wax'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/punishment'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
