--- a/stories/yue/0337_蠟做嘅細路仔.html
+++ b/stories/yue/0337_蠟做嘅細路仔.html
@@ -105,7 +105,7 @@ Southern African Folktale<br>粵語</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/10.jpg" /></p>
 
-<p>但係佢哋諗出咗一個好辦法：就係將融化咗嗰嚿蠟捻成咗一隻雀仔。</p>
+<p>但係佢哋諗出咗一個好辦法：就係將融化咗嗰嚿蠟捻成一隻雀仔。</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
