--- a/stories/index.html
+++ b/stories/index.html
@@ -2723,6 +2723,12 @@
       <td><a name="ja0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0095</td>
+      <td><a href="/stories/ja/0095_ザーマはすごいよ_slides.html" target="_blank">ザーマはすごいよ！</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0095"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0110</td>
       <td><a href="/stories/ja/0110_小さな種：ワンガリ・マータイの物語_slides.html" target="_blank">小さな種：ワンガリ・マータイの物語</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -6417,7 +6423,7 @@
       <td>0095</td>
       <td><a href="http://africanstorybook.org/stories/zama-great">Zama is great!</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0095">ar</a>, <a href="#bn0095">bn</a>, <a href="#de0095">de</a>, <a href="#es0095">es</a>, <a href="#fa0095">fa</a>, <a href="#hi0095">hi</a>, <a href="#it0095">it</a>, <a href="#ko0095">ko</a>, <a href="#nb0095">nb</a>, <a href="#nn0095">nn</a>, <a href="#pa0095">pa</a>, <a href="#pl0095">pl</a>, <a href="#tl0095">tl</a>, <a href="#tr0095">tr</a>, <a href="#ur0095">ur</a>, <a href="#yue0095">yue</a>, <a href="#zh0095">zh</a></td>
+      <td><a href="#ar0095">ar</a>, <a href="#bn0095">bn</a>, <a href="#de0095">de</a>, <a href="#es0095">es</a>, <a href="#fa0095">fa</a>, <a href="#hi0095">hi</a>, <a href="#it0095">it</a>, <a href="#ja0095">ja</a>, <a href="#ko0095">ko</a>, <a href="#nb0095">nb</a>, <a href="#nn0095">nn</a>, <a href="#pa0095">pa</a>, <a href="#pl0095">pl</a>, <a href="#tl0095">tl</a>, <a href="#tr0095">tr</a>, <a href="#ur0095">ur</a>, <a href="#yue0095">yue</a>, <a href="#zh0095">zh</a></td>
     </tr>
     <tr>
       <td>0098</td>
