--- a/stories/index.html
+++ b/stories/index.html
@@ -2687,6 +2687,12 @@
       <td><a name="ja0002"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0003</td>
+      <td><a href="/stories/ja/0003_学校の制服_slides.html" target="_blank">学校の制服</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0003"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
+    </tr>
+    <tr>
       <td>0006</td>
       <td><a href="/stories/ja/0006_アナンシと知恵_slides.html" target="_blank">アナンシと知恵</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2723,6 +2729,12 @@
       <td><a name="ja0067"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
+      <td>0087</td>
+      <td><a href="/stories/ja/0087_本を読むのが好き_slides.html" target="_blank">本を読むのが好き！</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0095</td>
       <td><a href="/stories/ja/0095_ザーマはすごいよ_slides.html" target="_blank">ザーマはすごいよ！</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -2733,6 +2745,12 @@
       <td><a href="/stories/ja/0110_小さな種：ワンガリ・マータイの物語_slides.html" target="_blank">小さな種：ワンガリ・マータイの物語</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
       <td><a name="ja0110"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
+      <td>0120</td>
+      <td><a href="/stories/ja/0120_髪_slides.html" target="_blank">髪</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0120"></a><a href="http://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
     </tr>
     <tr>
       <td>0127</td>
@@ -6249,7 +6267,7 @@
       <td>0003</td>
       <td><a href="http://africanstorybook.org/stories/school-clothes">School clothes</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0003">ar</a>, <a href="#bn0003">bn</a>, <a href="#da0003">da</a>, <a href="#de0003">de</a>, <a href="#eo0003">eo</a>, <a href="#es0003">es</a>, <a href="#fa0003">fa</a>, <a href="#gu0003">gu</a>, <a href="#hi0003">hi</a>, <a href="#it0003">it</a>, <a href="#ko0003">ko</a>, <a href="#nb0003">nb</a>, <a href="#nn0003">nn</a>, <a href="#pa0003">pa</a>, <a href="#pl0003">pl</a>, <a href="#ru0003">ru</a>, <a href="#tl0003">tl</a>, <a href="#tr0003">tr</a>, <a href="#ur0003">ur</a>, <a href="#vi0003">vi</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
+      <td><a href="#ar0003">ar</a>, <a href="#bn0003">bn</a>, <a href="#da0003">da</a>, <a href="#de0003">de</a>, <a href="#eo0003">eo</a>, <a href="#es0003">es</a>, <a href="#fa0003">fa</a>, <a href="#gu0003">gu</a>, <a href="#hi0003">hi</a>, <a href="#it0003">it</a>, <a href="#ja0003">ja</a>, <a href="#ko0003">ko</a>, <a href="#nb0003">nb</a>, <a href="#nn0003">nn</a>, <a href="#pa0003">pa</a>, <a href="#pl0003">pl</a>, <a href="#ru0003">ru</a>, <a href="#tl0003">tl</a>, <a href="#tr0003">tr</a>, <a href="#ur0003">ur</a>, <a href="#vi0003">vi</a>, <a href="#yue0003">yue</a>, <a href="#zh0003">zh</a></td>
     </tr>
     <tr>
       <td>0004</td>
@@ -6399,7 +6417,7 @@
       <td>0087</td>
       <td><a href="http://africanstorybook.org/stories/i-read">I like to read</a></td>
       <td><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
-      <td><a href="#ar0087">ar</a>, <a href="#bn0087">bn</a>, <a href="#de0087">de</a>, <a href="#es0087">es</a>, <a href="#fa0087">fa</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#it0087">it</a>, <a href="#ko0087">ko</a>, <a href="#nb0087">nb</a>, <a href="#nn0087">nn</a>, <a href="#pa0087">pa</a>, <a href="#pl0087">pl</a>, <a href="#ro0087">ro</a>, <a href="#ru0087">ru</a>, <a href="#sv0087">sv</a>, <a href="#tl0087">tl</a>, <a href="#tr0087">tr</a>, <a href="#ur0087">ur</a>, <a href="#yue0087">yue</a>, <a href="#zh0087">zh</a></td>
+      <td><a href="#ar0087">ar</a>, <a href="#bn0087">bn</a>, <a href="#de0087">de</a>, <a href="#es0087">es</a>, <a href="#fa0087">fa</a>, <a href="#gu0087">gu</a>, <a href="#hi0087">hi</a>, <a href="#it0087">it</a>, <a href="#ja0087">ja</a>, <a href="#ko0087">ko</a>, <a href="#nb0087">nb</a>, <a href="#nn0087">nn</a>, <a href="#pa0087">pa</a>, <a href="#pl0087">pl</a>, <a href="#ro0087">ro</a>, <a href="#ru0087">ru</a>, <a href="#sv0087">sv</a>, <a href="#tl0087">tl</a>, <a href="#tr0087">tr</a>, <a href="#ur0087">ur</a>, <a href="#yue0087">yue</a>, <a href="#zh0087">zh</a></td>
     </tr>
     <tr>
       <td>0089</td>
@@ -6465,7 +6483,7 @@
       <td>0120</td>
       <td><a href="http://africanstorybook.org/stories/hair">Hair</a></td>
       <td><a href="https://creativecommons.org/licenses/by-nc/3.0/">CC-BY-NC</a></td>
-      <td><a href="#ar0120">ar</a>, <a href="#bn0120">bn</a>, <a href="#de0120">de</a>, <a href="#es0120">es</a>, <a href="#fa0120">fa</a>, <a href="#gu0120">gu</a>, <a href="#it0120">it</a>, <a href="#ko0120">ko</a>, <a href="#nb0120">nb</a>, <a href="#nn0120">nn</a>, <a href="#pa0120">pa</a>, <a href="#pl0120">pl</a>, <a href="#tl0120">tl</a>, <a href="#tr0120">tr</a>, <a href="#ur0120">ur</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
+      <td><a href="#ar0120">ar</a>, <a href="#bn0120">bn</a>, <a href="#de0120">de</a>, <a href="#es0120">es</a>, <a href="#fa0120">fa</a>, <a href="#gu0120">gu</a>, <a href="#it0120">it</a>, <a href="#ja0120">ja</a>, <a href="#ko0120">ko</a>, <a href="#nb0120">nb</a>, <a href="#nn0120">nn</a>, <a href="#pa0120">pa</a>, <a href="#pl0120">pl</a>, <a href="#tl0120">tl</a>, <a href="#tr0120">tr</a>, <a href="#ur0120">ur</a>, <a href="#yue0120">yue</a>, <a href="#zh0120">zh</a></td>
     </tr>
     <tr>
       <td>0121</td>
