--- a/stories/index.html
+++ b/stories/index.html
@@ -2753,6 +2753,12 @@
       <td><a name="ja0087"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
     </tr>
     <tr>
+      <td>0089</td>
+      <td><a href="/stories/ja/0089_草木に話しかけるカライ_slides.html" target="_blank">草木に話しかけるカライ</a></td>
+      <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
+      <td><a name="ja0089"></a><a href="https://creativecommons.org/licenses/by/3.0/">CC-BY</a></td>
+    </tr>
+    <tr>
       <td>0095</td>
       <td><a href="/stories/ja/0095_ザーマはすごいよ_slides.html" target="_blank">ザーマはすごいよ！</a></td>
       <td><a href="https://drive.google.com/open?id=0B59ZADK9EsbsYjdxN19HUE5ZUVU"><img src="https://cloud.githubusercontent.com/assets/9295750/9473522/1d6fdde4-4b10-11e5-98f5-aa6c6b04a08e.png" alt="Google Drive" title="Download from Google Drive" /></a></td>
@@ -6441,7 +6447,7 @@
       <td>0089</td>
       <td><a href="http://africanstorybook.org/stories/khalai-talks-plants">Khalai talks to plants</a></td>
       <td><a href="https://creativecommons.org/licenses/by/4.0/">CC-BY</a></td>
-      <td><a href="#ar0089">ar</a>, <a href="#bn0089">bn</a>, <a href="#de0089">de</a>, <a href="#es0089">es</a>, <a href="#fa0089">fa</a>, <a href="#hi0089">hi</a>, <a href="#it0089">it</a>, <a href="#ko0089">ko</a>, <a href="#nb0089">nb</a>, <a href="#nn0089">nn</a>, <a href="#pa0089">pa</a>, <a href="#pl0089">pl</a>, <a href="#tl0089">tl</a>, <a href="#tr0089">tr</a>, <a href="#ur0089">ur</a>, <a href="#yue0089">yue</a>, <a href="#zh0089">zh</a></td>
+      <td><a href="#ar0089">ar</a>, <a href="#bn0089">bn</a>, <a href="#de0089">de</a>, <a href="#es0089">es</a>, <a href="#fa0089">fa</a>, <a href="#hi0089">hi</a>, <a href="#it0089">it</a>, <a href="#ja0089">ja</a>, <a href="#ko0089">ko</a>, <a href="#nb0089">nb</a>, <a href="#nn0089">nn</a>, <a href="#pa0089">pa</a>, <a href="#pl0089">pl</a>, <a href="#tl0089">tl</a>, <a href="#tr0089">tr</a>, <a href="#ur0089">ur</a>, <a href="#yue0089">yue</a>, <a href="#zh0089">zh</a></td>
     </tr>
     <tr>
       <td>0090</td>
